--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Projekat</title>
+	<title>BoogiemanzPage</title>
+
+
 </head>
 <body>
-<!-- Prvi komentar -->
-<div>
-	<span></span>
-<h1>Naslov</h1>
+<h1>Hello, my name is Melle Bratic</h1>
+<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t1.0-9/20228453_10203542956452750_8338396158625814459_n.jpg?oh=d9a1ae28127430a87214a0cfeebc49d9&oe=5A37A711">
 
-<p>prvi paragraf teksta koji sam napisao :D</p>
+<h3>Mesud Bratic</h3>
+<p>I was born 20.3.1989. in Zenica, Bosnia and Hercegovina</p>
 
-<h2>ovo je malo manji naslov</h2>
-<h3>jos manji naslov</h3>
-<h4>jos jos manji naslov</h4>
-<h5>najmanjji naslov</h5>
-<h6>najmanji naslov</h6>
-<hr>
-<a href="https://www.facebook.com/">Link</a>
+<p>Im fresh programer who know how to do stuff</p>
 
-<img src="http://www.am.unze.ba/pzi/2008/MujicElvisa/slike/jpeg_slika3.jpg"/> 
-
-<ul>
-	<li>prvi dio</li>
-    <li>drugi dio</li>
-    <li>treci dio</li>
-</ul>
-
-<ol>
-	<li>jedan</li>
-	<li>dva</li>
-	<li>tri</li>
+<a href="kontakt.html">Contact me</a> <a href="portfolio.html">My Portofolio</a>
 
 
-</ol>
-</div>
+
+
+
+
+
 
 
 
