--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 
 </head>
 <body>
+
 <h1>Hello, my name is Melle Bratic</h1>
+
+<a href="index.html">Home</a>
+<a href="kontakt.html">Contact</a>
+<a href="portfolio.html">Portfolio</a>
+
 <img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t1.0-9/20228453_10203542956452750_8338396158625814459_n.jpg?oh=d9a1ae28127430a87214a0cfeebc49d9&oe=5A37A711">
 
 <h3>Mesud Bratic</h3>
