--- a/kontakt.html
+++ b/kontakt.html
@@ -7,6 +7,10 @@
 <body>
 <h1>Where you can find me</h1>
 
+<a href="index.html">Home</a>
+<a href="kontakt.html">Contact</a>
+<a href="portfolio.html">Portfolio</a>
+
 <form>
 	<form action="#" method="push">
 	<input type="Text" name="Ime">
