--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,10 @@
 <body>
 <h1>All of my work</h1>
 
+<a href="index.html">Home</a>
+<a href="kontakt.html">Contact</a>
+<a href="portfolio.html">Portfolio</a>
+
 <img src="https://i.stack.imgur.com/xaYVL.png">
 <h3>Facebook</h3>
 <p>My greatest achivement</p>
