--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <a href="index.html">Home</a>
 <a href="kontakt.html">Contact</a>
-<a href="portfolio.html">Portfolio</a>
+<a href="portfolio.html">Portfolio</a><br>
 
 <img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t1.0-9/20228453_10203542956452750_8338396158625814459_n.jpg?oh=d9a1ae28127430a87214a0cfeebc49d9&oe=5A37A711">
 
