--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
 
 <a href="index.html">Home</a>
 <a href="kontakt.html">Contact</a>
-<a href="portfolio.html">Portfolio</a>
+<a href="portfolio.html">Portfolio</a><br>
 
 <form>
 	<form action="#" method="push">
