--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Portfolio</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 <h1>All of my work</h1>
