--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<title>BoogiemanzPage</title>
-
-
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
