--- a/kontakt.html
+++ b/kontakt.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Contact</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	
 </head>
 <body>
 <h1>Where you can find me</h1>
