--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-	<title>BoogiemanzPage</title>
+	<meta charset="UTF-8">
+	<title>Boogie Travel</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Asap+Condensed" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
+
 <body>
 
-<h1>Hello, my name is Melle Bratic</h1>
+<img id="headerpic" src="header.png">
 
-<a href="index.html">Home</a>
-<a href="kontakt.html">Contact</a>
-<a href="portfolio.html">Portfolio</a><br>
+<div class="topnavbar">
+<a id="topnavid" href="Plan.html">Plan a vacation</a> 
+<a id="topnavid" href="Business.html">Business travel</a> 
+<a id="topnavid" href="BoogieTravel.html">BoogieTravel LOGIN</a>
+</div>
 
-<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t1.0-9/20228453_10203542956452750_8338396158625814459_n.jpg?oh=d9a1ae28127430a87214a0cfeebc49d9&oe=5A37A711">
+<div class="navbar">
+<ul>
+	<li><a href="">why join us?</a></li>
+	<li><a href="">agent support</a></li>
+	<li><a href="">helpfull technology</a></li>
+	<li><a href="">training & education</a></li>
+	<li><a href="">about us</a></li>
+	<li><a href="">faqs</a></li>
+</ul></div>
 
-<h3>Mesud Bratic</h3>
-<p>I was born 20.3.1989. in Zenica, Bosnia and Hercegovina</p>
-
-<p>Im fresh programer who know how to do stuff</p>
-
-<a href="kontakt.html">Contact me</a> <a href="portfolio.html">My Portofolio</a>
-
-
-
-
-
+<h1 id="heading">WHY JOIN</h1>
 
 
 
