--- a/about.html
+++ b/about.html
@@ -11,25 +11,30 @@
 
 <body>
 
+<div id="container">
 <img id="headerpic" src="header4.png">
 
-<div class="topnavbar">
-<a id="topnavid" href="Plan.html">Plan a vacation</a> 
-<a id="topnavid" href="Business.html">Business travel</a> 
-<a id="topnavid" href="BoogieTravel.html">BoogieTravel LOGIN</a>
+<div id="navbar1">
+<a id="topnavlink" href="Plan.html">Plan a vacation</a> 
+<a id="topnavlink" href="Business.html">Business travel</a> 
+<a id="topnavlink" href="BoogieTravel.html">BoogieTravel LOGIN</a>
 </div>
 
-<div class="topnav" id="myTopnav">
-  <a id="aboutbar" href="index.html">Why join?</a>
-  <a id="aboutbar" href="agent.html">Agent support</a>
-  <a id="aboutbar" href="contact.html">Contact</a>
-  <a id="aboutbar" href="about.html">About us</a>
-  <a id="aboutbar" href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+
+<div id="navbar2">
+  <a id="navlink4" href="index.html">Why join?</a>
+  <a id="navlink4" href="agent.html">Agent support</a>
+  <a id="navlink4" href="contact.html">Contact</a>
+  <a id="navlink4" href="about.html">About us</a>
+  
 </div>
 
-<h1 id="heading">something bout us</h1>
+<h1 id="heading">our teams</h1>
+</div>
 
-<div class="background">
+
+<div id="mainpart">
+<div id="textpart">
 
 <h2 id="aboutheader2">STABILITY, CREDIBILITY, <br/> AND PROSPERITY.</h2>
 
@@ -47,7 +52,7 @@
 
 <p id="text">In fact, given our agency's immense booking volume ($606 million in 2016), our agents earn the highest commission percentage possible with most key travel suppliers—both Virtuoso and non-Virtuoso—which means even more money in your pocket.   Wait, hear that?  It sounds like "ka-ching!"</p>
 
-<img id="womanwoman" src="womanwoman.png">
+<img id="woman" src="womanwoman.png">
 </div>
 
 <img id="lastimg" src="http://www.wallpapers-web.com/data/out/202/5587415-travel-wallpapers.png">
@@ -58,18 +63,8 @@
 
 	
 
-</div>
+</div></div>
 
-<script>
-function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
-    } else {
-        x.className = "topnav";
-    }
-}
-</script>
 
 
 </body>
