--- a/agent.html
+++ b/agent.html
@@ -11,25 +11,30 @@
 
 <body>
 
+<div id="container">
 <img id="headerpic" src="header2.png">
 
-<div class="topnavbar">
-<a id="topnavid" href="Plan.html">Plan a vacation</a> 
-<a id="topnavid" href="Business.html">Business travel</a> 
-<a id="topnavid" href="BoogieTravel.html">BoogieTravel LOGIN</a>
+<div id="navbar1">
+<a id="topnavlink" href="Plan.html">Plan a vacation</a> 
+<a id="topnavlink" href="Business.html">Business travel</a> 
+<a id="topnavlink" href="BoogieTravel.html">BoogieTravel LOGIN</a>
 </div>
 
-<div class="topnav" id="myTopnav">
-  <a id="agentbar" href="index.html">Why join?</a>
-  <a id="agentbar" href="agent.html">Agent support</a>
-  <a id="agentbar" href="contact.html">Contact</a>
-  <a id="agentbar" href="about.html">About us</a>
-  <a id="agentbar" href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+
+<div id="navbar2">
+  <a id="navlink2" href="index.html">Why join?</a>
+  <a id="navlink2" href="agent.html">Agent support</a>
+  <a id="navlink2" href="contact.html">Contact</a>
+  <a id="navlink2" href="about.html">About us</a>
+  
 </div>
 
 <h1 id="heading">our teams</h1>
+</div>
 
-<div class="background">
+
+<div id="mainpart">
+<div id="textpart">
 
 <h2>YOU HAVE A LOT GOING FOR YOU WHEN YOU GO WITH BOOGIE TRAVEL.</h2>
 
@@ -54,7 +59,7 @@ We understand you run your own business and we are committed to helping you succ
 <p id="text">Last, but certainly not least, our accounting team works hard to track your commissions and complete payment in a timely and accurate manner, and they're always available to answer any questions you might have regarding your commissions. </p>
 
 
-<img id="baldmen" src="baldmen.png">
+<img id="woman" src="baldmen.png">
 </div>
 
 <img id="lastimg" src="http://www.allmacwallpaper.com/get/Retina-MacBook-Pro-13-inch-wallpapers/New-York-City-Aerial-View-2560x1600/9736-11.jpg">
@@ -65,18 +70,9 @@ We understand you run your own business and we are committed to helping you succ
 
 	
 
-</div>
+</div></div>
 
-<script>
-function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
-    } else {
-        x.className = "topnav";
-    }
-}
-</script>
+
 
 
 </body>
