--- a/contact.html
+++ b/contact.html
@@ -11,25 +11,30 @@
 
 <body>
 
+<div id="container">
 <img id="headerpic" src="header3.png">
 
-<div class="topnavbar">
-<a id="topnavid" href="Plan.html">Plan a vacation</a> 
-<a id="topnavid" href="Business.html">Business travel</a> 
-<a id="topnavid" href="BoogieTravel.html">BoogieTravel LOGIN</a>
+<div id="navbar1">
+<a id="topnavlink" href="Plan.html">Plan a vacation</a> 
+<a id="topnavlink" href="Business.html">Business travel</a> 
+<a id="topnavlink" href="BoogieTravel.html">BoogieTravel LOGIN</a>
 </div>
 
-<div class="topnav" id="myTopnav"><div class="contactnav">
-  <a id="contactnav" href="index.html">Why join?</a>
-  <a id="contactnav" href="agent.html">Agent support</a>
-  <a id="contactnav" href="contact.html">Contact</a>
-  <a id="contactnav" href="about.html">About us</a>
-  <a id="contactnav" href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-</div></div>
 
-<h1 id="heading">where to find us?</h1>
+<div id="navbar2">
+  <a id="navlink3" href="index.html">Why join?</a>
+  <a id="navlink3" href="agent.html">Agent support</a>
+  <a id="navlink3" href="contact.html">Contact</a>
+  <a id="navlink3" href="about.html">About us</a>
+  
+</div>
 
-<div class="background">
+<h1 id="heading">where to find?</h1>
+</div>
+
+
+<div id="mainpart">
+<div id="textpart">
 
 <h2>WHERE TO FIND BOOGIE TRAVEL AND HOW TO GET IN TOUCH</h2>
 
@@ -37,7 +42,7 @@
 
 <h3>INTERNATIONAL PHONE NUMBERS</h3>
 
-<p id="text">Have your own local phone number in any city or country worldwide. Showing a local number to visitors at your web site increases trust and sales. Incoming calls are forwarded anywhere worldwide at the cost of a local call.<br/>
+<p id="text">Have your own local phone number in any texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext city or country worldwide. Showing a local number to visitors at your web site increases trust and sales. Incoming calls are forwarded anywhere worldwide at the cost of a local call.<br/>
 
 From $0.99/month.</p>
 
@@ -47,8 +52,10 @@ From $0.99/month.</p>
 
 
 
-<img id="happywoman" src="happywoman.png">
+<img id="woman" src="happywoman.png">
 </div>
+
+
 
 <img id="lastimg" src="http://pic1.win4000.com/wallpaper/c/543f6cf1f0132.jpg">
 
@@ -58,18 +65,7 @@ From $0.99/month.</p>
 
 	
 
-</div>
-
-<script>
-function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
-    } else {
-        x.className = "topnav";
-    }
-}
-</script>
+</div></div>
 
 
 </body>
