nove izmjene respo

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
 <h2>MORE REALISTICALLY, THE QUESTION IS, "WHY NOT JOIN?"</h2>
 
-<p id="text">Andavo Travel offers independent contractors something very desirable in today's extremely challenging market: <br/>The ability to compete, and even thrive.<br/>
+<p id="text">Boogie Travel offers independent contractors something very desirable in today's extremely challenging market: <br/>The ability to compete, and even thrive.<br/>
 How, you ask? Let us count the ways:</p>
 
 <h3>MULTIPLE GDS SYSTEMS</h3>
 
-<p id="text">Andavo Travel provides you access to multiple GDS travel systems, cutting edge technology, and higher commission structures. You'll also enjoy premier resources and competitive advantages, like access to the Virtuoso network and strong vendor relationships with key travel suppliers that will enable you to grow your business without relinquishing your independence. Our dedicated staff and professional support services are also available to help you successfully meet, and exceed the unique needs of your clients.</p>
+<p id="text">Boogie Travel provides you access to multiple GDS travel systems, cutting edge technology, and higher commission structures. You'll also enjoy premier resources and competitive advantages, like access to the Virtuoso network and strong vendor relationships with key travel suppliers that will enable you to grow your business without relinquishing your independence. Our dedicated staff and professional support services are also available to help you successfully meet, and exceed the unique needs of your clients.</p>
 
 <h3>HEALTHY COMPENSATION</h3>
 
