--- a/agent.html
+++ b/agent.html
@@ -10,70 +10,71 @@
 </head>
 
 <body>
-
-<div id="container">
-<img id="headerpic" src="header2.png">
-
-<div id="navbar1">
-<a id="topnavlink" href="Plan.html">Plan a vacation</a> 
-<a id="topnavlink" href="Business.html">Business travel</a> 
-<a id="topnavlink" href="login.html">BoogieTravel LOGIN</a>
-</div>
+<div class="container">
 
 
-<div id="navbar2">
-  <a id="navlink2" href="index.html">Why join?</a>
-  <a id="navlink2" href="agent.html">Agent support</a>
-  <a id="navlink2" href="contact.html">Contact</a>
-  <a id="navlink2" href="about.html">About us</a>
+	<div id="header2">
+	<div id="firstnavbar">
+	<ul>
+	<li><a href="Plan.html">Plan a vacation</a></li> 
+	<li><a href="Business.html">Business travel</a> </li>
+	<li><a href="login.html">Boogie Travel LOGIN</a></li>
+	</ul> 
+
+	</div>
+	<div id="secondnavbar">
+	<ul> 
+  	<li><a href="index.html">Why join?</a></li>
+  	<li><a href="agent.html">Agent support</a></li>
+  	<li><a href="contact.html">Contact</a></li>
+  	<li><a href="about.html">About us</a></li>
+  	</ul>
+  	</div>
   
-</div>
-
-<h1 id="heading">our teams</h1>
-</div>
 
 
-<div id="mainpart">
-<div id="textpart">
-
-<h2>YOU HAVE A LOT GOING FOR YOU WHEN YOU GO WITH BOOGIE TRAVEL.</h2>
-
-<p id="text">Without trying to sound boastful, we pride ourselves on a sky-high level of agent support. Our hosted agents benefit from having access to an entire support staff that understands and appreciates the agency/contractor relationship, and are dedicated to one person: You.
-
-We understand you run your own business and we are committed to helping you succeed at a higher level than ever before.  Cross our hearts. </p>
-
-<h3>SUPPORT TEAM</h3>
-
-<p id="text">At your beck and call is our GDS support team with an international rate desk and ticketing assistance. This team ensures airline contracts are applied correctly in order to maximize commissions, reduce debit memos, and double-check exchange calculations as well as ever-changing airline rules.</p>
-
-<h3>CONTINUOUS CONTACT</h3>
-
-<p id="text">Our dedicated network manager is responsible for maintaining strong vendor relationships, scheduling vendor webinars and trainings, and connecting you with the correct contact or resource to answer any of your questions.  Andavo Travel also maintains a members-only website, Community Connection, that puts all of our hosted agents in contact with each other. Within the site, you can open a forum topic for discussion, or write up a review of a destination, product or vendor for other advisors to enjoy.</p>
-
-<h3>MARKETING ASSISTANCE</h3>
-
-<p id="text">But wait, there's more.  Our dedicated marketing manager can assist (even on a one-to-one basis, if needed) with setting up or enhancing your professional pages for Facebook, Twitter, LinkedIn, Pinterest, Instagram or any other social media channel you choose to participate in. Our marketing manager also offers training on best practices for blogging in the travel industry. Additionally, our marketing manager can help you maximize Virtuoso marketing to increase your sales. </p>
-
-<h3>ACCOUNTING PROS</h3>
-
-<p id="text">Last, but certainly not least, our accounting team works hard to track your commissions and complete payment in a timely and accurate manner, and they're always available to answer any questions you might have regarding your commissions. </p>
+	<h1>our teams</h1>
+	</div>
 
 
-<img id="woman" src="baldmen.png">
-</div>
+	<div id="main">
+	<h2>YOU HAVE A LOT GOING FOR YOU WHEN YOU GO WITH BOOGIE TRAVEL.</h2>
 
-<img id="lastimg" src="http://www.allmacwallpaper.com/get/Retina-MacBook-Pro-13-inch-wallpapers/New-York-City-Aerial-View-2560x1600/9736-11.jpg">
+	<p>Without trying to sound boastful, we pride ourselves on a sky-high level of agent support. Our hosted agents benefit from having access to an entire support staff that understands and appreciates the agency/contractor relationship, and are dedicated to one person: You.
+
+	We understand you run your own business and we are committed to helping you succeed at a higher level than ever before.  Cross our hearts. </p>
+
+	<h3>SUPPORT TEAM</h3>
+
+	<p>At your beck and call is our GDS support team with an international rate desk and ticketing assistance. This team ensures airline contracts are applied correctly in order to maximize commissions, reduce debit memos, and double-check exchange calculations as well as ever-changing airline rules.</p>
+
+	<h3>CONTINUOUS CONTACT</h3>
+
+	<p>Our dedicated network manager is responsible for maintaining strong vendor relationships, scheduling vendor webinars and trainings, and connecting you with the correct contact or resource to answer any of your questions.  Andavo Travel also maintains a members-only website, Community Connection, that puts all of our hosted agents in contact with each other. Within the site, you can open a forum topic for discussion, or write up a review of a destination, product or vendor for other advisors to enjoy.</p>
+
+	<h3>MARKETING ASSISTANCE</h3>
+
+	<p>But wait, there's more.  Our dedicated marketing manager can assist (even on a one-to-one basis, if needed) with setting up or enhancing your professional pages for Facebook, Twitter, LinkedIn, Pinterest, Instagram or any other social media channel you choose to participate in. Our marketing manager also offers training on best practices for blogging in the travel industry. Additionally, our marketing manager can help you maximize Virtuoso marketing to increase your sales. </p>
+
+	<h3>ACCOUNTING PROS</h3>
+
+	<p>Last, but certainly not least, our accounting team works hard to track your commissions and complete payment in a timely and accurate manner, and they're always available to answer any questions you might have regarding your commissions. </p>
+	</div>
+
+	<img id="sideimg" src="baldmen.png">
+	
+
+	<img id="botimg" src="http://www.allmacwallpaper.com/get/Retina-MacBook-Pro-13-inch-wallpapers/New-York-City-Aerial-View-2560x1600/9736-11.jpg">
 
 
-<div class="boogieman">
-<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p>
+	<div id="boogiemanz">
+	<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p></div>
 
 	
 
-</div></div>
 
 
 
-
+</div>
 </body>
 </html>
