--- a/contact.html
+++ b/contact.html
@@ -10,62 +10,66 @@
 </head>
 
 <body>
-
-<div id="container">
-<img id="headerpic" src="header3.png">
-
-<div id="navbar1">
-<a id="topnavlink" href="Plan.html">Plan a vacation</a> 
-<a id="topnavlink" href="Business.html">Business travel</a> 
-<a id="topnavlink" href="login.html">BoogieTravel LOGIN</a>
-</div>
+<div class="container">
 
 
-<div id="navbar2">
-  <a id="navlink3" href="index.html">Why join?</a>
-  <a id="navlink3" href="agent.html">Agent support</a>
-  <a id="navlink3" href="contact.html">Contact</a>
-  <a id="navlink3" href="about.html">About us</a>
-  
-</div>
-
-<h1 id="heading">where to find?</h1>
-</div>
+	<div id="header3">
+	<div id="firstnavbar">
+	
 
 
-<div id="mainpart">
-<div id="textpart">
+	<ul>
+	<li><a href="Plan.html">Plan a vacation</a> </li>
+	<li><a href="Business.html">Business travel</a> </li>
+	<li><a href="login.html">Boogie Travel LOGIN</a></li>
+	</ul>
+	</div>
 
-<h2>WHERE TO FIND BOOGIE TRAVEL AND HOW TO GET IN TOUCH</h2>
+	<div id="secondnavbar">
+	<ul> 
+	 <li><a href="index.html">Why join?</a></li>
+	  <li><a href="agent.html">Agent support</a></li>
+	  <li><a href="contact.html">Contact</a></li>
+	  <li><a href="about.html">About us</a></li>
+  	</ul>
+	</div>
 
-<p id="text">Our agents are everywhere, just call the number that we provided, and first agent will find you in matter of few hours</p>
-
-<h3>INTERNATIONAL PHONE NUMBERS</h3>
-
-<p id="text">Have your own local phone number in any texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext city or country worldwide. Showing a local number to visitors at your web site increases trust and sales. Incoming calls are forwarded anywhere worldwide at the cost of a local call.<br/>
-
-From $0.99/month.</p>
-
-<h3>CONTACT MAIL</h3>
-
-<p id="text">Just send us a mail on: boogiemanzno1@gmail.com - higly responsive staff who will get in contact with you in few minutes</p>
-
-
-
-<img id="woman" src="happywoman.png">
+	<h1>where to find?</h1>
 </div>
 
 
 
-<img id="lastimg" src="http://pic1.win4000.com/wallpaper/c/543f6cf1f0132.jpg">
+	<div id="main">
+	<h2>WHERE TO FIND BOOGIE TRAVEL AND HOW TO GET IN TOUCH</h2>
+	
+	<p id="text">Our agents are everywhere, just call the number that we provided, and first agent will find you in matter of few hours</p>
+
+	<h3>INTERNATIONAL PHONE NUMBERS</h3>	
+
+	<p id="text">Have your own local phone number in any texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext city or country worldwide. Showing a local number to visitors at your web site increases trust and sales. Incoming calls are forwarded anywhere worldwide at the cost of a local call.<br/>
+
+	From $0.99/month.</p>
+
+	<h3>CONTACT MAIL</h3>
+
+	<p id="text">Just send us a mail on: boogiemanzno1@gmail.com - higly responsive staff who will get in contact with you in few minutes</p>
+	</div>
 
 
-<div class="boogieman">
-<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p>
+	<img id="sideimg" src="happywoman.png">
+
+
+
+
+	<img id="botimg" src="http://pic1.win4000.com/wallpaper/c/543f6cf1f0132.jpg">
+
+
+	<div id="boogiemanz">
+	<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p>
 
 	
 
-</div></div>
+</div>
 
 
 </body>
