--- a/about.html
+++ b/about.html
@@ -11,59 +11,69 @@
 
 <body>
 
-<div id="container">
-<img id="headerpic" src="header4.png">
-
-<div id="navbar1">
-<a id="topnavlink" href="Plan.html">Plan a vacation</a> 
-<a id="topnavlink" href="Business.html">Business travel</a> 
-<a id="topnavlink" href="login.html">BoogieTravel LOGIN</a>
-</div>
+<div class="container">
 
 
-<div id="navbar2">
-  <a id="navlink4" href="index.html">Why join?</a>
-  <a id="navlink4" href="agent.html">Agent support</a>
-  <a id="navlink4" href="contact.html">Contact</a>
-  <a id="navlink4" href="about.html">About us</a>
+	<div id="header4">
+	<div id="firstnavbar">
+	
+
+
+	<ul>
+	<li><a id="topnavlink" href="Plan.html">Plan a vacation</a> </li>
+	<li><a id="topnavlink" href="Business.html">Business travel</a> </li>
+	<li><a id="topnavlink" href="login.html">Boogie Travel LOGIN</a></li>
+	</ul>
+	</div>
+	
+
+
+	<div id="secondnavbar">
+	<ul> 
+	  <li><a id="navlink4" href="index.html">Why join?</a></li>
+	  <li><a id="navlink4" href="agent.html">Agent support</a></li>
+	  <li><a id="navlink4" href="contact.html">Contact</a></li>
+	  <li><a id="navlink4" href="about.html">About us</a></li>
+	  </ul>
+	  </div>
   
-</div>
-
-<h1 id="heading">something bout us</h1>
-</div>
 
 
-<div id="mainpart">
-<div id="textpart">
-
-<h2 id="aboutheader2">STABILITY, CREDIBILITY, <br/> AND PROSPERITY.</h2>
-
-<p id="text">Our promise to our network of travel agents is to help you provide world-class service to your clients through excellence, trust, integrity, loyalty, family, community and caring.  Speaking of caring, Andavo Travel volunteers considerable time and financial support to CHOICE Humanitarian, a non-profit organization working to end extreme poverty around the world.</p>
-
-<h3 id="aboutheader3">WE CARE A LOT</h3>
-
-<p id="text">Andavo Travel provides you access to multiple GDS travel systems, cutting edge technology, and higher commission structures. You'll also enjoy premier resources and competitive advantages, like access to the Virtuoso network and strong vendor relationships with key travel suppliers that will enable you to grow your business without relinquishing your independence. Our dedicated staff and professional support services are also available to help you successfully meet, and exceed the unique needs of your clients.</p>
-
-<h3 id="aboutheader3">A DIVISION OF CB TRAVEL.</h3>
-
-<p id="text">Our compensation package is extremely competitive.  Think of us as the host agency that helps you go places, like to the bank. In fact, you can bank on these key benefits</p>
-
-<h3 id="aboutheader3">WE MAKE YOU SMILE</h3>
-
-<p id="text">In fact, given our agency's immense booking volume ($606 million in 2016), our agents earn the highest commission percentage possible with most key travel suppliers—both Virtuoso and non-Virtuoso—which means even more money in your pocket.   Wait, hear that?  It sounds like "ka-ching!"</p>
-
-<img id="woman" src="womanwoman.png">
-</div>
-
-<img id="lastimg" src="http://www.wallpapers-web.com/data/out/202/5587415-travel-wallpapers.png">
+	<h1>something bout us</h1></div>
 
 
-<div class="boogieman">
-<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p>
+
+
+
+	<div id="main">
+	<h2>STABILITY, CREDIBILITY, <br/> AND PROSPERITY.</h2>
+
+	<p>Our promise to our network of travel agents is to help you provide world-class service to your clients through excellence, trust, integrity, loyalty, family, community and caring.  Speaking of caring, Andavo Travel volunteers considerable time and financial support to CHOICE Humanitarian, a non-profit organization working to end extreme poverty around the world.</p>
+
+	<h3">WE CARE A LOT</h3>
+
+	<p>Andavo Travel provides you access to multiple GDS travel systems, cutting edge technology, and higher commission structures. You'll also enjoy premier resources and competitive advantages, like access to the Virtuoso network and strong vendor relationships with key travel suppliers that will enable you to grow your business without relinquishing your independence. Our dedicated staff and professional support services are also available to help you successfully meet, and exceed the unique needs of your clients.</p>
+
+	<h3>A DIVISION OF CB TRAVEL.</h3>
+
+	<p>Our compensation package is extremely competitive.  Think of us as the host agency that helps you go places, like to the bank. In fact, you can bank on these key benefits</p>
+
+	<h3>WE MAKE YOU SMILE</h3>
+
+	<p>In fact, given our agency's immense booking volume ($606 million in 2016), our agents earn the highest commission percentage possible with most key travel suppliers—both Virtuoso and non-Virtuoso—which means even more money in your pocket.   Wait, hear that?  It sounds like "ka-ching!"</p>
+	</div>
+
+	<img id="sideimg" src="womanwoman.png">
+    
+    <img id="botimg" src="http://www.wallpapers-web.com/data/out/202/5587415-travel-wallpapers.png">
+
+
+	<div id="boogiemanz">
+	<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p></div>
 
 	
 
-</div></div>
+</div>
 
 
 
