--- a/about.html
+++ b/about.html
@@ -45,12 +45,12 @@
 
 
 
-	<div id="main">
+	<div id="main4">
 	<h2>STABILITY, CREDIBILITY, <br/> AND PROSPERITY.</h2>
 
 	<p>Our promise to our network of travel agents is to help you provide world-class service to your clients through excellence, trust, integrity, loyalty, family, community and caring.  Speaking of caring, Andavo Travel volunteers considerable time and financial support to CHOICE Humanitarian, a non-profit organization working to end extreme poverty around the world.</p>
 
-	<h3">WE CARE A LOT</h3>
+	<h3>WE CARE A LOT</h3>
 
 	<p>Andavo Travel provides you access to multiple GDS travel systems, cutting edge technology, and higher commission structures. You'll also enjoy premier resources and competitive advantages, like access to the Virtuoso network and strong vendor relationships with key travel suppliers that will enable you to grow your business without relinquishing your independence. Our dedicated staff and professional support services are also available to help you successfully meet, and exceed the unique needs of your clients.</p>
 
@@ -69,7 +69,7 @@
 
 
 	<div id="boogiemanz">
-	<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p></div>
+	<p>©Boogiemanz 2017, <a href="https://www.facebook.com/boogiemanzz">boogiemanzno1@hgmail.com</a> boogiedesign</p></div>
 
 	
 
