--- a/agent.html
+++ b/agent.html
@@ -37,7 +37,7 @@
 	</div>
 
 
-	<div id="main">
+	<div id="main2">
 	<h2>YOU HAVE A LOT GOING FOR YOU WHEN YOU GO WITH BOOGIE TRAVEL.</h2>
 
 	<p>Without trying to sound boastful, we pride ourselves on a sky-high level of agent support. Our hosted agents benefit from having access to an entire support staff that understands and appreciates the agency/contractor relationship, and are dedicated to one person: You.
@@ -68,7 +68,7 @@
 
 
 	<div id="boogiemanz">
-	<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p></div>
+	<p>©Boogiemanz 2017, <a href="https://www.facebook.com/boogiemanzz">boogiemanzno1@hgmail.com</a> boogiedesign</p></div>
 
 	
 
