--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 
 
-	<div id="main">
+	<div id="main3">
 	<h2>WHERE TO FIND BOOGIE TRAVEL AND HOW TO GET IN TOUCH</h2>
 	
 	<p id="text">Our agents are everywhere, just call the number that we provided, and first agent will find you in matter of few hours</p>
@@ -65,7 +65,7 @@
 
 
 	<div id="boogiemanz">
-	<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p>
+	<p>©Boogiemanz 2017, <a href="https://www.facebook.com/boogiemanzz">boogiemanzno1@hgmail.com</a> boogiedesign</p></div>
 
 	
 
