--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
 	<div id="boogiemanz">
-	<p>©Boogiemanz 2017, boogiemanzno1@hotmail.com boogiedesign</p></div>
+	<p>©Boogiemanz 2017, <a href="https://www.facebook.com/boogiemanzz">boogiemanzno1@hgmail.com</a> boogiedesign</p></div>
 
 	
 
