--- a/contact.html
+++ b/contact.html
@@ -42,17 +42,17 @@
 	<div id="main3">
 	<h2>WHERE TO FIND BOOGIE TRAVEL AND HOW TO GET IN TOUCH</h2>
 	
-	<p id="text">Our agents are everywhere, just call the number that we provided, and first agent will find you in matter of few hours</p>
+	<p>Our agents are everywhere, just call the number that we provided, and first agent will find you in matter of few hours</p>
 
 	<h3>INTERNATIONAL PHONE NUMBERS</h3>	
 
-	<p id="text">Have your own local phone number in any texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext city or country worldwide. Showing a local number to visitors at your web site increases trust and sales. Incoming calls are forwarded anywhere worldwide at the cost of a local call.<br/>
+	<p> Have your own local phone number in any city or country worldwide. Showing a local number to visitors at your web site increases trust and sales. Incoming calls are forwarded anywhere worldwide at the cost of a local call. </p>
 
-	From $0.99/month.</p>
+	<p>From $0.99/month.</p>
 
 	<h3>CONTACT MAIL</h3>
 
-	<p id="text">Just send us a mail on: boogiemanzno1@gmail.com - higly responsive staff who will get in contact with you in few minutes</p>
+	<p> Just send us a mail on: boogiemanzno1@gmail.com - higly responsive staff who will get in contact with you in few minutes </p>
 	</div>
 
 
