--- a/agent.html
+++ b/agent.html
@@ -64,7 +64,7 @@
 	<img id="sideimg" src="baldmen.png">
 	
 
-	<img id="botimg" src="http://www.allmacwallpaper.com/get/Retina-MacBook-Pro-13-inch-wallpapers/New-York-City-Aerial-View-2560x1600/9736-11.jpg">
+	<img id="botimg" src="bottompic2.png">
 
 
 	<div id="boogiemanz">
