--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 
 
 
-	<img id="botimg" src="http://pic1.win4000.com/wallpaper/c/543f6cf1f0132.jpg">
+	<img id="botimg" src="bottompic3.png">
 
 
 	<div id="boogiemanz">
